--- a/amplify.yml
+++ b/amplify.yml
@@ -3,20 +3,24 @@ backend:
   phases:
     build:
       commands:
+        - export NODE_OPTIONS="--max-old-space-size=4096"
         - corepack enable
         - corepack prepare pnpm@latest --activate
-        - pnpm install --frozen-lockfile
+        - pnpm config set store-dir .pnpm-store
+        - pnpm install --frozen-lockfile --prefer-offline
         - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 
 frontend:
   phases:
     preBuild:
       commands:
-        - export NODE_OPTIONS=--max-old-space-size=4096
-    build:
-      commands:
+        - export NODE_OPTIONS="--max-old-space-size=4096"
         - corepack enable
         - corepack prepare pnpm@latest --activate
+        - pnpm config set store-dir .pnpm-store
+        - pnpm install --frozen-lockfile --prefer-offline
+    build:
+      commands:
         - pnpm run build
   artifacts:
     baseDirectory: dist
